--- a/api/external/api-copy-v2.yaml
+++ b/api/external/api-copy-v2.yaml
@@ -1,65 +1,13 @@
 swagger: '2.0'
 info:
   version: v2
-  title: 副本管理接口
+  title: 副本浏览
 schemes:
   - https
 basePath: /
 tags:
   - name: copy-controller
 paths:
-  '/v2/copies/{copyId}/catalogs':
-    get:
-      x-impact-subsystem: 不影响
-      x-access-port: 25081
-      x-auth-required: 'Y'
-      x-public-api: 'Y'
-      x-sysadmin-role: 'Y'
-      x-dp-admin-role: 'Y'
-      tags:
-        - copy-controller
-      operationId: ListCopyCatalogs
-      consumes:
-        - application/json
-      summary: 浏览副本中文件和目录信息
-      description: 浏览副本中文件和目录信息
-      x-is-registered: 'N'
-      x-support-sdk: 'N'
-      produces:
-        - application/json
-      parameters:
-        - name: copyId
-          in: path
-          required: true
-          type: string
-          description: 副本id
-        - name: X-Auth-Token
-          in: header
-          required: true
-          description: 访问令牌
-          type: string
-        - name: pageNo
-          in: query
-          required: true
-          description: 起始页，默认为0
-          type: integer
-          format: int32
-        - name: pageSize
-          in: query
-          required: true
-          description: 分页大小，默认200
-          type: integer
-          format: int32
-        - name: parentPath
-          in: query
-          required: true
-          description: 根路径
-          type: string
-      responses:
-        '200':
-          description: 文件系统响应体
-          schema:
-            $ref: '#/definitions/FileSystemResponseList'
   /v2/copies/available-time-ranges:
     get:
       x-impact-subsystem: 不影响
@@ -119,6 +67,7 @@ paths:
           description: 查询指定时间范围可用于恢复的时间段响应体
           schema:
             $ref: '#/definitions/AvailableTimeRangesResponseList'
+      x-order: 0
   '/v2/copies/{copyId}/action/download':
     get:
       x-impact-subsystem: 不影响
@@ -159,6 +108,109 @@ paths:
           description: 下载副本中的文件的响应对象
           schema:
             $ref: '#/definitions/DownLoadResp'
+      x-order: 1
+  '/v2/copies/{copyId}/action/verify':
+    post:
+      x-dm-role: 'N'
+      x-impact-subsystem: 影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-rd-admin-role: 'N'
+      x-auditor-role: 'N'
+      x-dp-admin-role: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
+      tags:
+        - copy-controller
+      summary: 执行副本校验任务
+      description: 执行副本校验任务
+      operationId: ExecuteCopyVerifyTask
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: copyId
+          in: path
+          required: true
+          type: string
+          description: 副本id
+      responses:
+        '200':
+          description: 成功响应对象
+          schema:
+            $ref: 'api-restore-v2.yaml#/definitions/UuidObject'
+          examples:
+            application/json: |-
+              {
+                  “uuid”: "12dsd9234812kjfskljflsa"
+              }
+        '404':
+          description: 未找到接口
+        '500':
+          description: 任务失败
+          schema:
+            type: object
+          examples:
+            application/json:
+              errorCode: 1677936643
+              errorMessage: An exception occurs during service processing.
+              parameters:
+                - param1
+                - param2
+  '/v2/copies/{copyId}/catalogs':
+    get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
+      x-dp-admin-role: 'Y'
+      tags:
+        - copy-controller
+      operationId: ListCopyCatalogs
+      consumes:
+        - application/json
+      summary: 浏览副本中文件和目录信息
+      description: 浏览副本中文件和目录信息
+      x-is-registered: 'N'
+      x-support-sdk: 'N'
+      produces:
+        - application/json
+      parameters:
+        - name: copyId
+          in: path
+          required: true
+          type: string
+          description: 副本id
+        - name: X-Auth-Token
+          in: header
+          required: true
+          description: 访问令牌
+          type: string
+        - name: pageNo
+          in: query
+          required: true
+          description: 起始页，默认为0
+          type: integer
+          format: int32
+        - name: pageSize
+          in: query
+          required: true
+          description: 分页大小，默认200
+          type: integer
+          format: int32
+        - name: parentPath
+          in: query
+          required: true
+          description: 根路径
+          type: string
+      responses:
+        '200':
+          description: 文件系统响应体
+          schema:
+            $ref: '#/definitions/FileSystemResponseList'
+      x-order: 3
 definitions:
   FileSystemResponseList:
     description: 文件系统响应体
@@ -193,6 +245,9 @@ definitions:
       type:
         type: string
         description: 文件类型（文件夹/文件/链接文件）
+      extendInfo:
+        type: string
+        description: 扩展字段
     required:
       - path
       - modifyTime
